# UBpi

./: .gitignore  README.md  aptsources  budgie-image.sh  seed.yaml  setup-budgie.dontrun
configuration-app/: README.md  apthelper.py  budgie-armconfig-autostart.desktop  budgie-armconfig.desktop  budgie-ssh.sh  budgie-vnc.sh  budgie-xrdp.sh  config.ui  display.py  findmypi.py  findmypiclient.py  findmypiserver.py  hint.py  install.sh  layout.py  main.py  meson.build  meson_post_install  org.ubuntubudgie.armconfig.gresource.xml  org.ubuntubudgie.armconfig.gschema.xml  overclock.py  pi-clockspeed.py  remote.py  test.py  ubuntubudgiecompact.layout  vncdialog.py  vncwindow.py  x11vnc.service
configuration-app/data/: budgie-armconfig-autostart.desktop  budgie-armconfig.desktop  meson.build
configuration-app/schema/: org.ubuntubudgie.armconfig.gschema.xml
configuration-app/src/: display.py  findmypiserver.py  main.py  meson.build  overclock.py  remote.py  vncwindow.py
configuration-app/src/findmypi/: findmypi.py  findmypiclient.py  findmypiserver.py  meson.build
configuration-app/src/lib/: apthelper.py  hint.py  meson.build  vncwindow.py
configuration-app/src/modules/: display.py  layout.py  meson.build  overclock.py  remote.py
configuration-app/src/scripts/: budgie-autologin.sh  budgie-ssh.sh  budgie-vnc.sh  budgie-xrdp.sh  meson.build  pi-kmsmode.sh  reset.sh  x11vnc.service
configuration-app/ui/: config.ui  meson.build
patches/: README.md
